! add in some missing first_th last_th class designators ModerationCenter.template.php, Packages.template.php ! add button style to the Packages.template.php advanced option to improve visibility ! fix report generation button spacing (missing css)

--- a/Themes/default/css/admin.css
+++ b/Themes/default/css/admin.css
@@ -627,3 +627,12 @@ h3.grid_header
 {
 	margin-bottom: 4px;
 }
+
+/* Styles for the Report generation 
+------------------------------------------------- */
+#report_buttons
+{
+    min-height: 2em;
+    padding-left: 0;
+	padding-bottom: 2px;
+}
